// file: pkg/auth/proto/messages/api_key.proto
// version: 1.0.0
// guid: a1b2c3d4-e5f6-789a-b0c1-d2e3f4a5b6c7

edition = "2023";

package gcommon.v1.auth;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/auth/proto";

/**
 * APIKey represents a user-issued API key used for authenticating
 * programmatic access. The key value itself should be stored securely
 * and only the hashed form transmitted.
 */
message APIKey {
  // Unique identifier for the API key
  string id = 1;

  // ID of the user this key belongs to
  string user_id = 2;

  // Human readable description for the key
  string description = 3;

  // Hash of the API key value
  string key_hash = 4;

  // Creation timestamp
  google.protobuf.Timestamp created_at = 5 [lazy = true];

  // Optional expiration timestamp
  google.protobuf.Timestamp expires_at = 6 [lazy = true];

  // Whether the key is currently active
  bool active = 7;
}
